--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@adobe/helix-fields-filter",
+  "name": "@adobe/helix-vulcain-filters",
   "version": "0.0.1",
-  "description": "A vulcain-like fields filter for OpenWhisk web action",
+  "description": "Vulcain-like fields filters for OpenWhisk web actions",
   "main": "src/index.js",
   "scripts": {
     "test": " nyc --reporter=text --reporter=lcov --check-coverage --branches 100 --statements 100 --lines 100 mocha",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/adobe/helix-fields-filter"
+    "url": "https://github.com/adobe/helix-vulcain-filters"
   },
   "author": "",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/adobe/helix-fields-filter/issues"
+    "url": "https://github.com/adobe/helix-vulcain-filters/issues"
   },
-  "homepage": "https://github.com/adobe/helix-fields-filter#readme",
+  "homepage": "https://github.com/adobe/helix-vulcain-filters#readme",
   "dependencies": {
     "json-pointer": "^0.6.0",
     "traverse": "^0.6.6"
